trigger docs build

--- a/docs/index.ipynb
+++ b/docs/index.ipynb
@@ -3,8 +3,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "dotnet_repl_cellExecutionStartTime": "2024-01-03T14:01:29.7359431+01:00",
-    "dotnet_repl_cellExecutionEndTime": "2024-01-03T14:01:29.7581085+01:00"
+    "dotnet_repl_cellExecutionEndTime": "2024-01-03T14:01:29.7581085+01:00",
+    "dotnet_repl_cellExecutionStartTime": "2024-01-03T14:01:29.7359431+01:00"
    },
    "source": [
     "# ARCTokenization\n",
@@ -12,11 +12,19 @@
     "this is the home of the documentation for 2 libraries:\n",
     "\n",
     "- [ControlledVocabulary](./ControlledVocabulary/Introduction.html) - a .NET library for modelling and working with controlled vocabularies.\n",
-    "- [ARCTokenization](./ARCTokenization/Introduction.html) - a library for parsing Research metadata formatted as Annotated Research Contexts ([ARCs](https://github.com/nfdi4plants/ARC-specification)) as tokens of a controlled structural vocabulary."
+    "- [ARCTokenization](./ARCTokenization/Introduction.html) - a .NET library for parsing Research metadata formatted as Annotated Research Contexts ([ARCs](https://github.com/nfdi4plants/ARC-specification)) as tokens of a controlled structural vocabulary."
    ]
   }
  ],
  "metadata": {
+  "dotnet_interactive": {
+   "defaultKernelName": "fsharp",
+   "items": [
+    {
+     "name": "fsharp"
+    }
+   ]
+  },
   "kernelspec": {
    "display_name": ".NET (F#)",
    "language": "F#",
@@ -30,14 +38,6 @@
    "version": "6.0"
   },
   "polyglot_notebook": {
-   "defaultKernelName": "fsharp",
-   "items": [
-    {
-     "name": "fsharp"
-    }
-   ]
-  },
-  "dotnet_interactive": {
    "defaultKernelName": "fsharp",
    "items": [
     {
